increase spacing between clusters, fix edge paths

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
   top: 0;
   left: 0;
   width: 3200px;
-  height: 2500px;
+  height: 2600px;
   transform-origin: 0 0;
   will-change: transform;
 }
